fix overlapping bug and add address to new post

--- a/src/App.css
+++ b/src/App.css
@@ -99,3 +99,15 @@
   width: 100%;
   height: 50vh;
 }
+
+.map{
+  z-index: 1;
+  height: auto;
+  position: relative;
+}
+
+.time{
+  position: relative;
+  z-index: 10;
+  bottom: 100%;
+}
